selects page 추가
selects/ 페이지 추가

--- a/crescendo/myapp/templates/main/index.html
+++ b/crescendo/myapp/templates/main/index.html
@@ -12,12 +12,13 @@
         <title>Crescendo</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="shortcut icon" href="{% static 'assets/img/favicon.ico' %}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">Crescendo</a>
+            <a class="navbar-brand ps-3" href="index.do"><img src="/static/assets/img/logo.png" alt="logo"></a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
